--- a/style.css
+++ b/style.css
@@ -252,7 +252,14 @@ body {
         max-width: 80%;
         height: auto;
     }
+        
+@media (max-width: 768px) {
+    .coffee-button {
+        font-size: 12px; /* Taille un peu plus petite */
+        padding: 6px 10px; /* Ajustement des marges internes */
+    }
 }
+
 
 /* Phrase accroche*/
 .phrase-container p {
