--- a/style.css
+++ b/style.css
@@ -215,6 +215,7 @@ h1,
   .right-container {
     /* Selon votre design, ajustez ici si vous devez masquer certains éléments sur mobile */
   }
+} 
 
 /* =================== PHRASE ET CHOIX =================== */
 .phrase-container p {
